# OpenUT

./: CMakeLists.txt
Game/: CMakeLists.txt
Game/include/Game/: App.h  Window.h
Game/src/: App.cpp  EntryMain.cpp  Window.cpp
OpenUT/include/: ThreadModel.h
OpenUT/src/: App.cpp
Plugins/: CMakeLists.txt
VEngine/: CMakeLists.txt
VEngine/include/: pch.h
VEngine/include/Controls/: Keyboard.h  Mouse.h
VEngine/include/Engine/: Graphics.h
VEngine/include/Engine/Bindable/: BackBuffer.h  Bindable.h  Codex.h  DepthStencil.h  Drawable.h  GraphicsResource.h  IndexBuffer.h  RenderTarget.h  Texture.h
VEngine/include/Engine/Dynamic/: VertexBuffer.h  VertexLayout.h
VEngine/include/Engine/Model/: Mesh.h
VEngine/include/Engine/Render/: Drawable.h  RenderPass.h
VEngine/include/Framework/: DXGIInfoManager.h
VEngine/src/: Graphics.cpp
VEngine/src/Controls/: Keyboard.cpp  Mouse.cpp
VEngine/src/Engine/: Graphics.cpp
VEngine/src/Engine/Bindable/: BackBuffer.cpp  Codex.cpp  ConstantBuffer.cpp  DepthStencil.cpp  GraphicsResource.cpp  IndexBuffer.cpp  PixelShader.cpp  RenderTarget.cpp  VertexBuffer.cpp
VEngine/src/Engine/Model/: Mesh.cpp
VEngine/src/Engine/Render/: DeferredRenderGraph.cpp
VEngine/src/Framework/: DXGIInfoManager.cpp  Exceptions.cpp
WinRT/: CMakeLists.txt
dependencies/: CMakeLists.txt
engine/: CMakeLists.txt
engine/include/: pch.h
engine/include/Controls/: Keyboard.h
engine/include/Engine/Bindable/: Codex.h  ConstantBuffer.h  PixelShader.h  TransformCBuf.h  VertexBuffer.h  VertexShader.h
engine/include/Engine/Model/: Material.h
engine/include/Engine/Render/: DeferredRenderGraph.h  LightingPass.h  RenderGraph.h
engine/include/Engine/Scene/: Camera.h
engine/include/Framework/: Exceptions.h
engine/shaders/: CMakeLists.txt  simple.vs.hlsl
engine/src/Engine/Bindable/: IndexBuffer.cpp  Texture.cpp  TransformCBuf.cpp  VertexShader.cpp
engine/src/Engine/Model/: Material.cpp
engine/src/Engine/Render/: Drawable.cpp
engine/src/Framework/: DXGIInfoManager.cpp
